@@ -1,5 +1,10 @@
 2001-05-19  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>
 
+	* conf/mount/mount_linux.c (linux_nfs_error): don't special case
+	the 0 result, just put it into the translation list
+
+2001-05-19  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>
+
 	* conf/mount/mount_linux.c (linux_nfs_error): don't report success
 	(0) as error (NE_IO)!
 
